--- a/app/resource/static/css/table.css
+++ b/app/resource/static/css/table.css
@@ -6,9 +6,7 @@
     justify-content: center;
     margin: 2rem auto;
     padding: 1rem;
-    border: 1px solid #ccc;
     border-radius: 10px;
-    background-color: #fff;
 }
 
 .table-category {
@@ -25,6 +23,7 @@
     transition: transform 0.3s;
     text-align: center;
     font-size: 1.25rem;
+    font-weight: 700;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
