--- a/app/resource/static/css/log.css
+++ b/app/resource/static/css/log.css
@@ -3,7 +3,7 @@
     width: 80%;
     margin: 2rem auto;
     padding: 1rem;
-    border: 1px solid #ccc;
+    border: 1px solid #888;
     border-radius: 10px;
     background-color: #fff;
 }
@@ -14,7 +14,7 @@
 }
 
 .log-table th, .log-table td {
-    border: 1px solid #ccc;
+    border: 1px solid #888;
     padding: 0.5rem;
     text-align: center;
 }
@@ -22,6 +22,10 @@
 .log-table th {
     background-color: #f2f2f2;
     color: #333;
+}
+
+.log-table thead tr th {
+    background-color: #888;
 }
 
 .log-table tbody tr:nth-child(even) {
@@ -35,4 +39,4 @@
 h2 {
     text-align: center;
     margin-top: 2rem;
-}
+}   
