--- a/app/resource/static/css/order.css
+++ b/app/resource/static/css/order.css
@@ -1,57 +1,68 @@
-/* static/css/table.css */
-.table-container {
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 2rem auto;
-    padding: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background-color: #fff;
-}
-
-.table-category {
-    width: 30%;
+/* static/css/order.css */
+.order-container {
+    width: 80%; /* 부모 컨테이너의 가로 길이를 80%로 설정 */
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 10px;
-    transition: width 0.3s;
+    margin: 2rem auto; /* 상하좌우 여백 설정 */
+    padding: 1rem;
+    border-radius: 10px;
+}
+
+.order-category {
+    width: 60%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px; /* 각 섹션 사이의 간격 추가 */
+    transition: width 0.3s; /* 너비 변화에 대한 애니메이션 효과 */
 }
 
 .selectable-box {
-    border: 1px solid #ccc;
+    border: 1px solid #555;
     padding: 10px;
     margin: 5px;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    width: 100%;
+    width: 100%; /* 가로 길이를 부모 컨테이너의 100%로 설정 */
     text-align: center;
-    font-size: 1.25rem;
-    border-radius: 10px;
+    font-size: 1.25rem; /* 폰트 크기도 증가 */
+    border-radius: 10px; /* 모서리를 둥글게 설정 */
+    background-color: #fff;
 }
 
-.selectable-box.available {
-    background-color: #4CAF50;
-    color: white;
+.selectable-box.selected {
+    background-color: #555;
+    color: #fff;
 }
 
-.selectable-box.in-use {
-    background-color: #f44336;
+button {
+    padding: 0.5rem 1rem;
+    border: none;
+    background-color: #888;
     color: white;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    font-size: 1rem; /* 버튼 폰트 크기를 줄임 */
+    white-space: nowrap; /* 버튼 텍스트 줄바꿈 방지 */
+    margin-top: 1rem; /* 상단 여백 추가 */
+    width: 100px; /* 버튼 너비 고정 */
+}
+
+button:hover {
+    background-color: #555;
 }
 
 .modal {
-    display: none;
+    display: none; /* 기본적으로 보이지 않음 */
     position: fixed;
-    z-index: 1000;
+    z-index: 1000; /* 최상위 레이어 */
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.4); /* 반투명 검정 배경 */
     align-items: center;
     justify-content: center;
 }
@@ -63,8 +74,8 @@
     border: 1px solid #888;
     width: 80%;
     max-width: 600px;
-    border-radius: 10px;
-    text-align: center;
+    border-radius: 10px; /* 모서리를 둥글게 설정 */
+    text-align: center; /* 텍스트 중앙 정렬 */
 }
 
 .close-button {
